# My_Projects

./: README.md
Brick_breaker/: README.md
C_project/: README.md
C_project/project_src/: CMakeLists.txt  README.md  todo.txt
C_project/project_src/cmake/: CMakeCache.txt  Makefile  button  button_limit  button_with_image  cmake_install.cmake  frame_image  frame_multiple  frame_relief  hello_world  minimal  puzzle  radiobutton  test_ei_draw  test_ei_widget  test_event_internal  toplevel  two048
C_project/project_src/docs/: doxygen.cfg  doxygen.cfg.in
C_project/project_src/include/: ei_application.h  ei_complex_types.h  ei_widget.h  ei_widgetclass.h
C_project/project_src/include/geometry_managers/: ei_placer.h
C_project/project_src/include/helpers/: ei_draw_helpers.h  ei_geometry_helpers.h  ei_math.h  ei_memory.h  ei_string.h
C_project/project_src/include/internals/: ei_application_internal.h  ei_geometrymanager_internal.h  ei_picking_internal.h  ei_widgetclass_internal.h
C_project/project_src/include/internals/event_internals/: event_internal.h  linked_callback.h  linked_tag_and_widgets.h  linked_widget.h  widget_hashmap.h
C_project/project_src/include/iterators/: ei_iterator.h  ei_linked_list.h  ei_subsurface_iterator.h  ei_widget_tree_iterator.h
C_project/project_src/include/widgetclasses/: ei_buttonclass.h  ei_frameclass.h  ei_radiobuttonclass.h  ei_toplevelclass.h
C_project/project_src/include/widgetclasses/config/: ei_toplevelclass_config.h
C_project/project_src/include/widgetclasses/internal_events/: ei_toplevelclass_internal_event.h
C_project/project_src/include/widgets/: ei_button.h  ei_frame.h  ei_radiobutton.h  ei_toplevel.h
C_project/project_src/src/: ei_application.c  ei_draw.c  ei_event.c  ei_geometrymanager.c  ei_widget.c  ei_widgetclass.c
C_project/project_src/src/geometry_managers/: ei_placer.c
C_project/project_src/src/helpers/: ei_draw_helpers.c  ei_geometry_helpers.c  ei_memory.c
C_project/project_src/src/internals/: ei_application_internal.c  ei_geometrymanager_internal.c  ei_picking_internal.c  ei_widgetclass_internal.c
C_project/project_src/src/internals/event_internals/: event_internal.c  linked_callback.c  linked_tag_and_widgets.c  linked_widget.c  widget_hashmap.c
C_project/project_src/src/iterators/: ei_subsurface_iterator.c  ei_widget_tree_iterator.c
C_project/project_src/src/widgetclasses/: ei_buttonclass.c  ei_frameclass.c  ei_radiobuttonclass.c  ei_toplevelclass.c
C_project/project_src/src/widgetclasses/internal_events/: ei_toplevelclass_internal_event.c
C_project/project_src/src/widgets/: ei_frame.c  ei_radiobutton.c  ei_toplevel.c
C_project/project_src/tests/: button.c  button_limit.c  frame.c  frame_image.c  frame_multiple.c  frame_relief.c  frame_text.c  hello_world.c  minesweeper.c  minimal.c  parsing.c  puzzle.c  radiobutton.c  toplevel.c
C_project/project_src/units/: test_ei_application.c  test_ei_draw.c  test_ei_frameclass.c  test_ei_geometry_helpers.c  test_ei_widget.c
C_project/project_src/units/event_internals/: test_event_internal.c  test_linked_callback.c  test_linked_tag_and_widgets.c  test_linked_widget.c  test_widget_hashmap.c
Internship_report_2022/: README.md
Motorized_weelchair/: README.md
Pi_project/: README.md
Pi_project/Source/: approximate_pi.py  draw.py
TIPE/: README.md
